--- a/src/components/central_part/users/users.module.css
+++ b/src/components/central_part/users/users.module.css
@@ -3,3 +3,11 @@
 
 .users_list {
   width: 100%; }
+
+.button_get_users {
+  display: block;
+  margin-top: 10px;
+  width: 100px;
+  padding: 5px;
+  background-color: #000;
+  color: #ffbffd; }
