--- a/src/components/central_part/users/users.module.scss
+++ b/src/components/central_part/users/users.module.scss
@@ -6,3 +6,11 @@
   width: 100%;
 }
 
+.button_get_users {
+  display: block;
+  margin-top: 10px;
+  width: 100px;
+  padding: 5px;
+  background-color: #000;
+  color: #ffbffd;
+}
