59(profilePage_ajax_api)_60(withRouter)

--- a/src/components/central_part/profile/posts/posts_available/post/post.module.css
+++ b/src/components/central_part/profile/posts/posts_available/post/post.module.css
@@ -4,9 +4,13 @@
   .post_title {
     margin-left: 20px; }
 
-.colored_circle {
+.avatar {
   width: 30px;
   height: 30px;
   margin-right: 20px;
   border-radius: 50px;
   background-color: #4164d0; }
+  .avatar img {
+    width: 100%;
+    max-width: 100%;
+    display: block; }
