--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -1,8 +1,16 @@
 .header {
+  display: flex;
+  justify-content: space-between;
   background-color: #000;
-  padding: 10px; }
+  padding: 10px;
+  color: white; }
   .header_logo {
     width: 50px;
     height: 50px;
     background-size: contain;
     background: #000 url("../../network.png") no-repeat center; }
+  .header a {
+    display: inline-block;
+    color: white;
+    font-weight: bold;
+    text-decoration: none; }
