--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -1,11 +1,21 @@
 .header {
+  display: flex;
+  justify-content: space-between;
   background-color: #000;
   padding: 10px;
+  color: white;
 
   &_logo {
     width: 50px;
     height: 50px;
     background-size: contain;
     background: #000 url("../../network.png") no-repeat center;
+  }
+
+  a {
+    display: inline-block;
+    color: white;
+    font-weight: bold;
+    text-decoration: none;
   }
 }
