--- a/src/components/central_part/users/user/user.module.scss
+++ b/src/components/central_part/users/user/user.module.scss
@@ -30,6 +30,10 @@
       padding: 5px;
       background-color: #000;
       color: #ffbffd;
+
+      &:disabled {
+        opacity: 0.5;
+      }
     }
   }
 
